src/test/ui/parser/issues/issue-62973.rs
// ignore-tidy-trailing-newlines
// error-pattern: aborting due to 5 previous errors

fn main() {}

fn p() { match s { v, E { [) {) }


